# Document-Retriever-Search-Engine-with-LangChain

./: main.py  pyproject.toml
BACKEND/: app.py  est.py  fileLoader.py  generateEmbeddings.py  generatingEmbedding.py  getCsvFiles.py  getFiles.py  indexModel.py  loadModel.py  mongoDb.py  pdfLoader.py  requirements.txt  vectorSearch.py
FRONTEND/src/: App.jsx
FRONTEND/src/Response/: Response.jsx
FRONTEND/src/upload/: Upload.jsx
