[project]
name = "document-retriever-search-engine-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.6.17",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.1",
    "pymongo>=4.17.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
]
